--- a/HomePage.html
+++ b/HomePage.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <title>InsanityGaming.com</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
     <script defer src="script.js"></script>
     <div class="stars"></div>
     <div class="stars2"></div>
