--- a/Tips.html
+++ b/Tips.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="stylesheet" href="css/tip.css">
+    <link rel="stylesheet" href="tip.css">
     <script defer src="script.js"></script>
     <title>Tips</title>
  
